<resources>
    <string name="app_name">开眼</string>
    <string name="title_home">首页</string>
    <string name="title_find">发现</string>
    <string name="title_find_en">Discover</string>
    <string name="title_hot">热门</string>
    <string name="title_hot_en">Popular</string>
    <string name="splash_text1">开 眼 ，</string>
    <string name="splash_text2">看 更 好</string>
    <string name="splash_text3">的 世 界</string>
    <string name="splash_text4">F E E D \t Y O U R \t E Y E S,</string>
    <string name="splash_text5">F E E D \t Y O U R \t S O U L.</string>
    <string name="eyepetizer">Eyepetizer</string>
    <string name="recommend">推荐</string>
    <string name="daily">日报</string>
    <string name="version">v%s</string>
    <string name="todo">TODO</string>
    <string name="setting">设置</string>
    <string name="notification">通知</string>
    <string name="reply">评论（%d）</string>
    <string name="notification_detail">详情</string>
    <string name="follow_system">深色跟随系统</string>
    <string name="enable_dark_mode_with_system_settings">随系统设置开启深色模式</string>
    <string name="dark_mode">深色模式</string>
    <string name="dark_mode_setting">深色设置</string>
    <string name="cache_setting">缓存设置</string>
    <string name="clear_cache">清空缓存</string>
    <string name="loading">加载中…</string>
    <string name="success">成功！</string>
    <string name="wait">开发中~</string>
    <string name="sure_to_clear_cache">缓存可以让您在下次浏览相同的资源时不再耗费流量，确认清空吗？</string>
    <string name="cancel">取消</string>
    <string name="confirm">确定</string>
    <string name="double_quit">再按一次退出程序</string>
    <string name="kind">#%s</string>
    <string name="click_retry">加载失败，点击重试</string>
    <string name="not_loading">加载完成</string>
    <string name="get_data_error">获取数据失败</string>
    <string name="developed_by">Developed by</string>
    <string name="my_name">冲锋皓</string>
    <string name="for_study">仅供学习交流使用</string>
    <string name="play_now">立即播放</string>
    <string name="video_introduce">视频简介</string>
    <string name="play_video_setting">播放设置</string>
    <string name="automatic_full_screen_play">横屏自动全屏</string>
    <string name="in_the_video_details_interface_automatically_plays">在视频详情界面，检测到手机横屏则自动全屏</string>
    <string name="square">广场</string>
    <string name="category">分类</string>
    <string name="dynamics">动态</string>
    <string name="auto_clear_cache">缓存自动清理</string>
    <string name="auto_clear_cache_when_quit">退出程序时，将自动清理产生的缓存</string>
    <string name="reply_to">回复</string>
    <string name="introduction">简介</string>
    <string name="weekly">周榜</string>
    <string name="monthly">月榜</string>
    <string name="historical">总榜</string>
    <string name="position">%d/%d</string>
    <string name="download_failed">下载失败</string>
    <string name="download_success">下载成功</string>
    <string name="collect">收藏（%d）</string>
    <string name="collect_info">收藏</string>
    <string name="collected">已收藏</string>
    <string name="sure_clear_all">确认清空所有收藏吗？</string>
    <string name="sure_un_collected">确认取消收藏该视频吗？</string>
    <string name="cleared">已清空</string>
    <string name="follow">关注</string>
    <string name="push_down_close">下拉关闭界面</string>
    <string name="chat">私信</string>
</resources>