<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="?attr/myBg2"
    android:fitsSystemWindows="true"
    tools:context=".ui.home.activity.SettingActivity">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/layout_header"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:background="?attr/myBg1"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <ImageView
            android:id="@+id/imageView_back"
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:contentDescription="@string/todo"
            android:padding="15dp"
            android:src="@drawable/baseline_arrow_back_24"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toStartOf="@+id/guideline15v"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <androidx.constraintlayout.widget.Guideline
            android:id="@+id/guideline15v"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            app:layout_constraintGuide_percent="0.15" />

        <TextView
            android:id="@+id/textView_title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/setting"
            android:textColor="?attr/myText1"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toEndOf="@+id/imageView_back"
            app:layout_constraintTop_toTopOf="parent" />

        <androidx.constraintlayout.widget.Guideline
            android:id="@+id/guideline85v"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            app:layout_constraintGuide_percent="0.85" />

        <ImageView
            android:id="@+id/imageView_share"
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:padding="16dp"
            android:src="@drawable/baseline_share_24"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="@+id/guideline85v"
            app:layout_constraintTop_toTopOf="parent" />
    </androidx.constraintlayout.widget.ConstraintLayout>

    <ScrollView
        android:layout_width="0dp"
        android:layout_height="0dp"
        app:layout_constraintBottom_toTopOf="@+id/textView_info"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/layout_header"
        app:layout_constraintVertical_bias="0.0">

        <LinearLayout
            android:id="@+id/layout_content"
            android:layout_width="match_parent"
            android:layout_height="600dp"
            android:orientation="vertical">

            <TextView
                android:id="@+id/textView_dark_mode_setting"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="16dp"
                android:layout_marginTop="8dp"
                android:text="@string/dark_mode_setting"
                android:textColor="@color/custom_color"
                android:textSize="12sp" />

            <androidx.constraintlayout.widget.ConstraintLayout
                android:id="@+id/constraintLayout_follow"
                android:layout_width="match_parent"
                android:layout_height="60dp"
                android:layout_marginTop="8dp"
                android:background="?attr/myBg1">

                <TextView
                    android:id="@+id/textView_follow_system"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="8dp"
                    android:text="@string/follow_system"
                    android:textColor="?attr/myText1"
                    app:layout_constraintBottom_toTopOf="@+id/textView_follow_system_tips"
                    app:layout_constraintStart_toStartOf="@+id/textView_follow_system_tips"
                    app:layout_constraintTop_toTopOf="parent" />

                <TextView
                    android:id="@+id/textView_follow_system_tips"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="16dp"
                    android:layout_marginTop="2dp"
                    android:layout_marginBottom="8dp"
                    android:text="@string/enable_dark_mode_with_system_settings"
                    android:textColor="?attr/myText2"
                    android:textSize="11sp"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/textView_follow_system" />

                <androidx.appcompat.widget.SwitchCompat
                    android:id="@+id/switch_follow"
                    android:layout_width="0dp"
                    android:layout_height="0dp"
                    android:layout_marginEnd="16dp"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="@+id/textView_follow_system"
                    app:layout_constraintTop_toTopOf="parent"
                    app:thumbTint="@color/switch_thumb_selector"
                    app:trackTint="@color/switch_track_selector" />
            </androidx.constraintlayout.widget.ConstraintLayout>

            <androidx.constraintlayout.widget.ConstraintLayout
                android:id="@+id/constraintLayout_night"
                android:layout_width="match_parent"
                android:layout_height="60dp"
                android:background="?attr/myBg1">

                <View
                    android:id="@+id/divider"
                    android:layout_width="0dp"
                    android:layout_height="0.5dp"
                    android:layout_marginStart="16dp"
                    android:layout_marginEnd="16dp"
                    android:background="?android:attr/listDivider"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent" />

                <TextView
                    android:id="@+id/textView_dark_mode"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="16dp"
                    android:layout_marginTop="16dp"
                    android:layout_marginBottom="16dp"
                    android:text="@string/dark_mode"
                    android:textColor="?attr/myText1"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent" />

                <androidx.appcompat.widget.SwitchCompat
                    android:id="@+id/switch_night"
                    android:layout_width="0dp"
                    android:layout_height="0dp"
                    android:layout_marginEnd="16dp"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="@+id/textView_dark_mode"
                    app:layout_constraintTop_toTopOf="parent"
                    app:thumbTint="@color/switch_thumb_selector"
                    app:trackTint="@color/switch_track_selector" />

            </androidx.constraintlayout.widget.ConstraintLayout>

            <TextView
                android:id="@+id/textView_play_video_setting"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="16dp"
                android:layout_marginTop="8dp"
                android:text="@string/play_video_setting"
                android:textColor="@color/custom_color"
                android:textSize="12sp" />

            <androidx.constraintlayout.widget.ConstraintLayout
                android:id="@+id/constraintLayout_play_video"
                android:layout_width="match_parent"
                android:layout_height="60dp"
                android:layout_marginTop="8dp"
                android:background="?attr/myBg1">

                <TextView
                    android:id="@+id/textView_play_video_system"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="8dp"
                    android:text="@string/automatic_full_screen_play"
                    android:textColor="?attr/myText1"
                    app:layout_constraintBottom_toTopOf="@+id/textView_play_video_system_tips"
                    app:layout_constraintStart_toStartOf="@+id/textView_play_video_system_tips"
                    app:layout_constraintTop_toTopOf="parent" />

                <TextView
                    android:id="@+id/textView_play_video_system_tips"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="16dp"
                    android:layout_marginTop="2dp"
                    android:layout_marginBottom="8dp"
                    android:text="@string/in_the_video_details_interface_automatically_plays"
                    android:textColor="?attr/myText2"
                    android:textSize="11sp"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/textView_play_video_system" />

                <androidx.appcompat.widget.SwitchCompat
                    android:id="@+id/switch_auto_play_video"
                    android:layout_width="0dp"
                    android:layout_height="0dp"
                    android:layout_marginEnd="16dp"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="@+id/textView_play_video_system"
                    app:layout_constraintTop_toTopOf="parent"
                    app:thumbTint="@color/switch_thumb_selector"
                    app:trackTint="@color/switch_track_selector" />
            </androidx.constraintlayout.widget.ConstraintLayout>

            <TextView
                android:id="@+id/textView_cache_setting"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="16dp"
                android:layout_marginTop="8dp"
                android:text="@string/cache_setting"
                android:textColor="@color/custom_color"
                android:textSize="12sp" />

            <androidx.constraintlayout.widget.ConstraintLayout
                android:id="@+id/constraintLayout_cache"
                android:layout_width="match_parent"
                android:layout_height="60dp"
                android:layout_marginTop="8dp"
                android:background="?attr/myBg1">

                <TextView
                    android:id="@+id/textView_clear_cache"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="16dp"
                    android:layout_marginTop="16dp"
                    android:layout_marginBottom="16dp"
                    android:gravity="center_vertical"
                    android:text="@string/clear_cache"
                    android:textColor="?attr/myText1"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintEnd_toStartOf="@+id/textView_cache_size"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent" />

                <TextView
                    android:id="@+id/textView_cache_size"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginEnd="16dp"
                    android:gravity="center"
                    android:textColor="?attr/myText1"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintTop_toTopOf="parent"
                    tools:text="18 MB" />
            </androidx.constraintlayout.widget.ConstraintLayout>

            <androidx.constraintlayout.widget.ConstraintLayout
                android:id="@+id/constraintLayout_auto_clear"
                android:layout_width="match_parent"
                android:layout_height="60dp"
                android:background="?attr/myBg1">

                <View
                    android:id="@+id/divider2"
                    android:layout_width="0dp"
                    android:layout_height="0.5dp"
                    android:layout_marginStart="16dp"
                    android:layout_marginEnd="16dp"
                    android:background="?android:attr/listDivider"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent" />

                <TextView
                    android:id="@+id/textView_auto_clear"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="8dp"
                    android:text="@string/auto_clear_cache"
                    android:textColor="?attr/myText1"
                    app:layout_constraintBottom_toTopOf="@+id/textView_auto_clear_tips"
                    app:layout_constraintStart_toStartOf="@+id/textView_auto_clear_tips"
                    app:layout_constraintTop_toTopOf="parent" />

                <TextView
                    android:id="@+id/textView_auto_clear_tips"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="16dp"
                    android:layout_marginTop="2dp"
                    android:layout_marginBottom="8dp"
                    android:text="@string/auto_clear_cache_when_quit"
                    android:textColor="?attr/myText2"
                    android:textSize="11sp"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/textView_auto_clear" />

                <androidx.appcompat.widget.SwitchCompat
                    android:id="@+id/switch_auto_clear_cache"
                    android:layout_width="0dp"
                    android:layout_height="0dp"
                    android:layout_marginEnd="16dp"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="@+id/textView_auto_clear"
                    app:layout_constraintTop_toTopOf="parent"
                    app:thumbTint="@color/switch_thumb_selector"
                    app:trackTint="@color/switch_track_selector" />
            </androidx.constraintlayout.widget.ConstraintLayout>


        </LinearLayout>
    </ScrollView>

    <TextView
        android:id="@+id/textView_info"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="16dp"
        android:text="@string/developed_by"
        android:textColor="?attr/myText1"
        android:textSize="12sp"
        app:layout_constraintBottom_toTopOf="@+id/guideline90h"
        app:layout_constraintEnd_toStartOf="@+id/guideline50v"
        app:layout_constraintStart_toStartOf="@+id/textView_warn"
        app:layout_constraintTop_toTopOf="@+id/guideline90h" />

    <TextView
        android:id="@+id/textView_name"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:text="@string/my_name"
        android:textColor="@color/custom_color"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="@+id/textView_info"
        app:layout_constraintEnd_toEndOf="@+id/textView_warn"
        app:layout_constraintStart_toStartOf="@+id/guideline50v"
        app:layout_constraintTop_toTopOf="@+id/textView_info" />

    <TextView
        android:id="@+id/textView_warn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/for_study"
        android:textColor="?attr/myText1"
        android:textSize="12sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/guideline90h" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline90h"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_percent="0.9" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline50v"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_percent="0.5" />

</androidx.constraintlayout.widget.ConstraintLayout>